# IoT-Protocol-Comparison-Test

./: Cargo.toml  LICENSE  README.md  lwm2m_real_analysis.json  matter_real_analysis.json  requirements.txt  run_analysis.py  run_comparison_analysis.py  setup.bat  test_complete_setup.py
analysis/: advanced_visualizer.py  advanced_visualizer1.py  complete_visualizer.py  statistical_analyzer.py  visualizer.py
docs/: USER_GUIDE.md
lwm2m-project/: enhanced_lwm2m_server.py  lwm2m_analyzer.py  lwm2m_client_backup.py  lwm2m_objects.py  real_lwm2m_server.py  requirements.txt
matter-project/: Cargo.toml
matter-project/examples/: research_onoff_light.rs
matter-project/src/: application_layer.rs  build.sh  main.rs  presentation_layer.rs  session_layer.rs  transport_analyzer.rs  transport_layer.rs
results/: analysis_report.txt  complete_analysis.json  lwm2m_real_analysis.json  matter_analysis.json  matter_real_analysis.json  protocol_comparison.json
src/: main.rs
