# matter-project-enhanced/Cargo.toml
[package]
name = "matter-osi-analyzer-enhanced"
version = "0.4.0"
edition = "2021"
authors = ["Your Name <your.email@domain.com>"]
description = "Enhanced Matter Protocol OSI Layer Analysis with Real Implementation"
license = "MIT"
repository = "https://github.com/abubakarwakili9/IoT-Protocol-Comparison-Test"

[dependencies]
# Matter Protocol Core
rs-matter = { git = "https://github.com/project-chip/rs-matter.git", branch = "main" }

# Async Runtime and Networking
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization and Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
bincode = "1.3"

# Networking Protocols
coap = "0.12"
mdns = "3.0"
quinn = "0.10"
rustls = "0.21"

# Cryptography
ring = "0.16"
rand = "0.8"

# Utilities and Error Handling
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }

# Performance Monitoring
sysinfo = "0.29"
prometheus = { version = "0.13", optional = true }

# Development Dependencies
[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

# Features
[features]
default = ["metrics"]
metrics = ["prometheus"]
embedded = []

# Benchmarks
[[bench]]
name = "transport_performance"
harness = false

[[bench]]
name = "session_performance"
harness = false

# Binary targets
[[bin]]
name = "matter_enhanced_analyzer"
path = "src/main.rs"

[[bin]]
name = "matter_device_simulator"
path = "src/device_simulator.rs"

[[bin]]
name = "matter_commissioner"
path = "src/commissioner.rs"

[[bin]]
name = "matter_performance_test"
path = "src/performance_test.rs"