# matter-project/Cargo.toml
# Using Real rs-matter with Working Examples for Research

[package]
name = "matter-research-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Abubakar Wakili <abubakar.wakili@example.com>"]
description = "Real Matter Protocol Research using rs-matter onoff_light example"
license = "MIT"

[dependencies]
# Real Matter Protocol - Official Implementation
rs-matter = { git = "https://github.com/project-chip/rs-matter.git", branch = "main" }

# Core dependencies (required by rs-matter)
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["net", "codec"] }
futures = "0.3"

# Serialization (used by rs-matter)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking (required by rs-matter examples)
socket2 = "0.5"

# Cryptography (required by rs-matter)
ring = "0.17"
rand = "0.8"

# Error handling and logging
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Optional: Zero-configuration networking (for Linux/Mac)
# Uncomment if on Linux with Avahi daemon
# zeroconf = { version = "0.12", optional = true }

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def"] }

# Features to match rs-matter examples
[features]
default = []
zeroconf = ["rs-matter/zeroconf"]  # For Linux/Mac with mDNS

# Examples (matching rs-matter structure)
[[example]]
name = "research_onoff_light"
path = "examples/research_onoff_light.rs"

# Development profile for faster builds
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true