# matter-project/Cargo.toml
# Full rs-matter Integration - Advanced Version
[package]
name = "matter-research-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Abubakar Wakili <abubakar.wakili@example.com>"]
description = "Real Matter Protocol Research using rs-matter"
license = "MIT"

[dependencies]
# Matter Protocol - Latest Version
rs-matter = { git = "https://github.com/project-chip/rs-matter.git", branch = "main" }

# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
socket2 = "0.5"

# Cryptography
ring = "0.17"
rand = "0.8"

# Error handling and logging
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Embassy for embedded-style async (required by rs-matter)
embassy-time = "0.3"
embassy-sync = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def"] }

[features]
default = ["std"]
std = ["rs-matter/std"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true